create product swagger
