# models/product.go
@@ -6,23 +6,33 @@ import (
 )
 
 type ProductRequest struct {
-	ProductName string `form:"product_name"`
-	CategoryId  int    `form:"category_id"`
-	Price       int    `form:"price"`
-	Color       string `form:"color"`
-	Count       int    `form:"count"`
-	Sizes       []int  `form:"sizes"`
+	ProductName string `json:"product_name"`
+	CategoryId  int    `json:"category_id"`
+	Price       int    `json:"price"`
+	Color       string `json:"color"`
+	Count       int    `json:"count"`
+	Sizes       []int  `json:"sizes"`
 	ImageUrl    string `json:"image_url"`
 }
 
 type FakeProduct struct {
-	ProductName string `form:"product_name"`
-	CategoryId  int    `form:"category_id"`
-	Price       int    `form:"price"`
-	Color       string `form:"color"`
-	Count       int    `form:"count"`
-	Sizes       string `form:"sizes"`
+	Name     string `form:"name"`
+	Category int    `form:"category"`
+	Price    int    `form:"price"`
+	Color    string `form:"color"`
+	Count    int    `form:"count"`
+	Sizes    string `form:"sizes"`
 }
+
+// type FakeProductIm struct {
+// 	ProductName string          `form:"product_name"`
+// 	CategoryId  int             `form:"category_id"`
+// 	Price       int             `form:"price"`
+// 	Color       string          `form:"color"`
+// 	Count       int             `form:"count"`
+// 	Sizes       string          `form:"sizes"`
+// 	Image       *multipart.File `form:"image"`
+// }
 
 type FakeProduct2 struct {
 	ProductName string `form:"product_name"`
