# pkg/handler/question.go
@@ -8,19 +8,19 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary Create Question
-// @Security ApiKeyAuth
-// @Tags question
+// @Summary     Create Question
+// @Security    ApiKeyAuth
+// @Tags        question
 // @Description create question by given id
-// @ID create-question
-// @Accept  json
-// @Produce  json
-// @Param input body models.UpdateQuestionInput true "question info"
-// @Success 200 {integer} integer 1
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /question [post]
+// @ID          create-question
+// @Accept      json
+// @Produce     json
+// @Param       input   body      models.UpdateQuestionInput true "question info"
+// @Success     200     {integer} integer                    1
+// @Failure     400,404 {object}  errorResponse
+// @Failure     500     {object}  errorResponse
+// @Failure     default {object}  errorResponse
+// @Router      /question [post]
 func (h *Handler) createQuestion(c *gin.Context) {
 	var input models.UpdateQuestionInput
 
@@ -42,18 +42,18 @@ func (h *Handler) createQuestion(c *gin.Context) {
 	})
 }
 
-// @Summary Get Question By Id
-// @Security ApiKeyAuth
-// @Tags question
+// @Summary     Get Question By Id
+// @Security    ApiKeyAuth
+// @Tags        question
 // @Description get question by given id
-// @ID get-question-by-id
-// @Produce  json
-// @Param id path string true "question id"
-// @Success 200 {object} models.Question
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /question/{id} [get]
+// @ID          get-question-by-id
+// @Produce     json
+// @Param       id      path     string true "question id"
+// @Success     200     {object} models.Question
+// @Failure     400,404 {object} errorResponse
+// @Failure     500     {object} errorResponse
+// @Failure     default {object} errorResponse
+// @Router      /question/{id} [get]
 func (h *Handler) getQuestionById(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -74,17 +74,17 @@ func (h *Handler) getQuestionById(c *gin.Context) {
 	})
 }
 
-// @Summary Get All Questions
-// @Tags question
+// @Summary     Get All Questions
+// @Tags        question
 // @Description get all questions
-// @ID get-all-questions
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} []models.Question
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /question [get]
+// @ID          get-all-questions
+// @Accept      json
+// @Produce     json
+// @Success     200     {object} []models.Question
+// @Failure     400,404 {object} errorResponse
+// @Failure     500     {object} errorResponse
+// @Failure     default {object} errorResponse
+// @Router      /question [get]
 func (h *Handler) getAllQuestions(c *gin.Context) {
 	data, err := h.services.Question.GetAllQuestions()
 	if err != nil {
@@ -99,20 +99,20 @@ func (h *Handler) getAllQuestions(c *gin.Context) {
 
 }
 
-// @Summary Update Question
-// @Security ApiKeyAuth
-// @Tags question
+// @Summary     Update Question
+// @Security    ApiKeyAuth
+// @Tags        question
 // @Description update question
-// @ID update-question
-// @Accept  json
-// @Produce  json
-// @Param input body models.UpdateQuestionInput true "question info"
-// @Param id path string true "question id"
-// @Success 200 {integer} integer 1
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /question/{id} [put]
+// @ID          update-question
+// @Accept      json
+// @Produce     json
+// @Param       input   body      models.UpdateQuestionInput true "question info"
+// @Param       id      path      string                     true "question id"
+// @Success     200     {integer} integer                    1
+// @Failure     400,404 {object}  errorResponse
+// @Failure     500     {object}  errorResponse
+// @Failure     default {object}  errorResponse
+// @Router      /question/{id} [put]
 func (h *Handler) updateQuestion(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -140,19 +140,19 @@ func (h *Handler) updateQuestion(c *gin.Context) {
 	})
 }
 
-// @Summary Delete Question
-// @Security ApiKeyAuth
-// @Tags question
+// @Summary     Delete Question
+// @Security    ApiKeyAuth
+// @Tags        question
 // @Description delete question by given id
-// @ID delete-question
-// @Accept  json
-// @Produce  json
-// @Param id path string true "question id"
-// @Success 200 {integer} integer 1
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /question/{id} [delete]
+// @ID          delete-question
+// @Accept      json
+// @Produce     json
+// @Param       id      path      string  true "question id"
+// @Success     200     {integer} integer 1
+// @Failure     400,404 {object}  errorResponse
+// @Failure     500     {object}  errorResponse
+// @Failure     default {object}  errorResponse
+// @Router      /question/{id} [delete]
 func (h *Handler) deleteQuestion(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
