# pkg/handler/size.go
@@ -9,19 +9,19 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary Create Size
-// @Security ApiKeyAuth
-// @Tags size
+// @Summary     Create Size
+// @Security    ApiKeyAuth
+// @Tags        size
 // @Description create size by given id
-// @ID create-size
-// @Accept  json
-// @Produce  json
-// @Param input body models.SizeInput true "size info"
-// @Success 200 {integer} integer 1
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /admin/sizes [post]
+// @ID          create-size
+// @Accept      json
+// @Produce     json
+// @Param       input   body      models.SizeInput true "size info"
+// @Success     200     {integer} integer          1
+// @Failure     400,404 {object}  errorResponse
+// @Failure     500     {object}  errorResponse
+// @Failure     default {object}  errorResponse
+// @Router      /admin/sizes [post]
 func (h *Handler) createSize(c *gin.Context) {
 	var input models.SizeInput
 
@@ -44,18 +44,18 @@ func (h *Handler) createSize(c *gin.Context) {
 }
 
 
-// @Summary Get All Size
-// @Security ApiKeyAuth
-// @Tags size
+// @Summary     Get All Size
+// @Security    ApiKeyAuth
+// @Tags        size
 // @Description get all sizes
-// @ID get-all-sizes
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} []models.Size
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /admin/sizes [get]
+// @ID          get-all-sizes
+// @Accept      json
+// @Produce     json
+// @Success     200     {object} []models.Size
+// @Failure     400,404 {object} errorResponse
+// @Failure     500     {object} errorResponse
+// @Failure     default {object} errorResponse
+// @Router      /admin/sizes [get]
 func (h *Handler) getAllSizes(c *gin.Context) {
 
 	data, err := h.services.Size.GetAllSize()
@@ -72,19 +72,19 @@ func (h *Handler) getAllSizes(c *gin.Context) {
 	})
 }
 
-// @Summary Delete Size
-// @Security ApiKeyAuth
-// @Tags size
+// @Summary     Delete Size
+// @Security    ApiKeyAuth
+// @Tags        size
 // @Description delete size by given id
-// @ID delete-size
-// @Accept  json
-// @Produce  json
-// @Param id path string true "size id"
-// @Success 200 {integer} integer 1
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /admin/sizes/{id} [delete]
+// @ID          delete-size
+// @Accept      json
+// @Produce     json
+// @Param       id      path      string  true "size id"
+// @Success     200     {integer} integer 1
+// @Failure     400,404 {object}  errorResponse
+// @Failure     500     {object}  errorResponse
+// @Failure     default {object}  errorResponse
+// @Router      /admin/sizes/{id} [delete]
 func (h *Handler) deleteSize(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -104,18 +104,18 @@ func (h *Handler) deleteSize(c *gin.Context) {
 	})
 }
 
-// @Summary Get Size By Id
-// @Security ApiKeyAuth
-// @Tags size
+// @Summary     Get Size By Id
+// @Security    ApiKeyAuth
+// @Tags        size
 // @Description get size by given id
-// @ID get-size-by-id
-// @Produce  json
-// @Param id path string true "size id"
-// @Success 200 {object} models.Size
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /admin/sizes/{id} [get]
+// @ID          get-size-by-id
+// @Produce     json
+// @Param       id      path     string true "size id"
+// @Success     200     {object} models.Size
+// @Failure     400,404 {object} errorResponse
+// @Failure     500     {object} errorResponse
+// @Failure     default {object} errorResponse
+// @Router      /admin/sizes/{id} [get]
 func (h *Handler) getSizesById(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
